--- a/src/index.css
+++ b/src/index.css
@@ -1,115 +1,114 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .main-title {
-  margin-top: 100px;
+    margin-top: 100px;
 }
 
 button {
-  outline: none;
-  background: none;
+    outline: none;
+    background: none;
 }
 
-.main-title h2{
-  text-align: center;
-  font-size: 40px;
-  line-height: 10px;
-}
-.main-title div{
-  background-color: #0db37cb1;
-  width: 120px;
-  height: 4px;
-  margin: auto;
-
+.main-title h2 {
+    text-align: center;
+    font-size: 40px;
+    line-height: 10px;
 }
 
-.tour-container{
-  width: 80%;
-  margin: auto;
-  min-height: 80vh;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+.main-title div {
+    background-color: #0db37cb1;
+    width: 120px;
+    height: 4px;
+    margin: auto;
 }
 
-.tours-card{
-  width: 30%;
-  min-height: 400;
- display: block;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  box-sizing: border-box;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -2px rgba(0, 0, 0, .05);
-  margin-top: 30px;
-  position: relative;
+.tour-container {
+    width: 80%;
+    margin: auto;
+    min-height: 80vh;
+    display: flex;
+    /* justify-content: space-between; */
+    flex-wrap: wrap;
+}
+
+.tours-card {
+    width: 30%;
+    min-height: 400;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    box-sizing: border-box;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -2px rgba(0, 0, 0, .05);
+    margin-top: 30px;
+    position: relative;
+    margin-left: 30px;
 }
 
 .tours-card div {
-  margin: auto;
-  
-}
-.price {
-  background: #0db37c;
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 6px 10px;
-  color: #fff;
-  font-weight: 600;
-  border-radius: 0 5px 0 0;
+    margin: auto;
 }
 
-.tours-card img{
-  width: 100%;
-  height: 300px;
-  border-radius: 5px 5px 0px 0px;
-  object-fit: cover;
+.price {
+    background: #0db37c;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 6px 10px;
+    color: #fff;
+    font-weight: 600;
+    border-radius: 0 5px 0 0;
+}
+
+.tours-card img {
+    width: 100%;
+    height: 300px;
+    border-radius: 5px 5px 0px 0px;
+    object-fit: cover;
 }
 
 .tours-card h2 {
-  font-size: 20px;
-  margin: 10px;
-  text-align: center;
+    font-size: 20px;
+    margin: 10px;
+    text-align: center;
 }
 
-.tour-description{
-  width: 90%;
+.tour-description {
+    width: 90%;
 }
+
 .tours-card p {
-  font-size: 17px;
-  color: rgba(0, 0, 0, 0.651);
+    font-size: 17px;
+    color: rgba(0, 0, 0, 0.651);
 }
 
-.Less-More{
-  font-weight: bold;
-  color: #0db37cb1;
-  font-size: 15px;
-  border: none;
+.Less-More {
+    font-weight: bold;
+    color: #0db37cb1;
+    font-size: 15px;
+    border: none;
 }
 
 .Interested {
-  color:#0db37cb1;
-  border: 1px solid #0db37cb1;
-  padding: 5px;
-  border-radius: 5px;
-  margin: 0 auto;
-  width: 100%;
-  font-size: 15px;
-  margin-bottom: 30px;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -2px rgba(0, 0, 0, .05);
-  transition: all .3s;
+    color: #0db37cb1;
+    border: 1px solid #0db37cb1;
+    padding: 5px;
+    border-radius: 5px;
+    margin: 0 auto;
+    width: 100%;
+    font-size: 15px;
+    margin-bottom: 30px;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -2px rgba(0, 0, 0, .05);
+    transition: all .3s;
 }
 
-.Interested:hover{
-  background: #0db37cb1;
-  color: #fff;
+.Interested:hover {
+    background: #0db37cb1;
+    color: #fff;
 }
