--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,30 @@ body {
     margin-top: 100px;
 }
 
+.no-tours {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 80px;
+}
+
+.no-tours h1 {
+    font-size: 60px;
+    font-weight: 300;
+}
+
+.no-tours button {
+    background-color: #0db37c;
+    padding: 7px 14px;
+    color: #fff;
+    font-weight: 700;
+    border-radius: 5px;
+}
+
 button {
     outline: none;
     background: none;
+    border: none;
 }
 
 .main-title h2 {
@@ -29,26 +50,27 @@ button {
 }
 
 .tour-container {
-    width: 80%;
+    width: 1200px;
     margin: auto;
-    min-height: 80vh;
     display: flex;
-    /* justify-content: space-between; */
     flex-wrap: wrap;
 }
 
-.tours-card {
+.tours-card-container {
     width: 30%;
-    min-height: 400;
-    display: block;
+    /* min-height: 400; */
+    /* display: block;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     border-radius: 5px;
     box-sizing: border-box;
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -2px rgba(0, 0, 0, .05);
     margin-top: 30px;
     position: relative;
     margin-left: 30px;
+}
+
+.tours-card {
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -2px rgba(0, 0, 0, .05);
 }
 
 .tours-card div {
@@ -77,6 +99,7 @@ button {
     font-size: 20px;
     margin: 10px;
     text-align: center;
+    font-weight: 600;
 }
 
 .tour-description {
@@ -89,9 +112,9 @@ button {
 }
 
 .Less-More {
-    font-weight: bold;
+    font-weight: 600;
     color: #0db37cb1;
-    font-size: 15px;
+    font-size: 14px;
     border: none;
 }
 
@@ -111,4 +134,27 @@ button {
 .Interested:hover {
     background: #0db37cb1;
     color: #fff;
+}
+
+
+/* phone screen  */
+
+@media screen and (max-width: 1200px) {
+    .tour-container {
+        width: 98%;
+    }
+}
+
+@media screen and (max-width: 920px) {
+    .tours-card-container {
+        width: 45%;
+    }
+}
+
+@media screen and (max-width: 615px) {
+    .tours-card-container {
+        width: 90%;
+        margin-left: 0px;
+        margin: auto;
+    }
 }
